change legacy codes to make project buildable
This commit includes:
gradle update, refactor to androidx, firebase & google maps dependency update(change),
change sdk version, remove deprecated classes & methods

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,8 @@
         <uses-library android:name="com.google.android.maps" />
 
         <meta-data
-            android:name="com.google.android.geo.API_KEY"  />
-            <!--android:value="GOOGLE_MAPS_KEY" needed inside <meta-data/>-->
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${MAPS_API_KEY}" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
