--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 
 repositories {
     mavenLocal()
@@ -8,16 +10,16 @@ repositories {
 }
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 29
     buildToolsVersion "25.0.2"
 
     defaultConfig {
         applicationId "com.google.firebase.codelab.friendlychat"
-        minSdkVersion 16
-        targetSdkVersion 24
+        minSdkVersion 19
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
         release {
@@ -33,34 +35,38 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:design:24.0.0'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'de.hdodenhof:circleimageview:1.3.0'
-    compile 'com.android.support:appcompat-v7:24.2.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+    implementation 'androidx.concurrent:concurrent-futures:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'de.hdodenhof:circleimageview:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     // Google
-    compile 'com.google.android.gms:play-services-auth:16.0.1'
-    compile 'com.google.gms:google-services:4.3.1'
+    implementation 'com.google.android.gms:play-services-auth:20.1.0'
+    implementation 'com.google.android.gms:play-services-maps:18.0.1'
+    //implementation 'com.google.android.gms:play-services-maps:10.0.1'
+    //implementation 'com.google.android.gms:play-services-location:10.0.1'
+    //implementation 'com.google.gms:google-services:4.3.1'
     // Firebase
-    compile 'com.google.firebase:firebase-database:16.0.1'
-    compile 'com.google.firebase:firebase-auth:10.0.0'
-    compile 'com.google.firebase:firebase-config:10.0.0'
-    compile 'com.google.android.gms:play-services-appinvite:10.0.0'
-    compile 'com.google.firebase:firebase-messaging:10.0.0'
-    compile 'com.google.android.gms:play-services-ads:10.0.0'
-    compile 'com.google.firebase:firebase-crash:10.0.0'
-    compile 'com.google.firebase:firebase-appindexing:10.0.0'
+    implementation platform('com.google.firebase:firebase-bom:29.1.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-database:16.0.1'
+    implementation 'com.google.firebase:firebase-auth:10.2.1'
+    implementation 'com.google.firebase:firebase-config:10.2.1'
+    implementation 'com.google.android.gms:play-services-appinvite:10.0.0'
+    implementation 'com.google.firebase:firebase-messaging:10.2.1'
+    implementation 'com.google.android.gms:play-services-ads:10.2.1'
+    implementation 'com.google.firebase:firebase-crash:10.2.1'
+    implementation 'com.google.firebase:firebase-appindexing:10.2.1'
     //FCM
-    compile 'com.squareup.okhttp3:okhttp:3.5.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.5.0'
     // Firebase UI
-    compile 'com.firebaseui:firebase-ui-database:0.4.0'
+    implementation 'com.firebaseui:firebase-ui-database:0.4.0'
     // Testing dependencies
-    androidTestCompile 'junit:junit:4.12'
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
-    androidTestCompile 'com.android.support.test:runner:0.5'
-    androidTestCompile 'com.android.support:support-annotations:24.0.0'
-    compile 'com.google.android.gms:play-services:10.0.0'
+    androidTestImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.annotation:annotation:1.0.0'
+    //implementation 'com.google.android.gms:play-services:10.0.1'
 }
-
-apply plugin: 'com.google.gms.google-services'
